--- a/bazi_web/public/config/config.json
+++ b/bazi_web/public/config/config.json
@@ -1,5 +1,5 @@
 {
-  "address": "43.143.225.203:8912",
+  "address": "https://oss.ydzz.cc",
   "mode": "Debug",
-  "optionUrl": "47.100.111.124:8660"
+  "optionUrl": "https://dev.ydzz.cc"
 }
